fixed picture alignment

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -221,6 +221,7 @@ h1 {
   margin-top:10px;
   margin-bottom:10px;
   text-align: center;
+  max-width: 500px;
 }
 
 .project-description {
